@@ -4,6 +4,15 @@ GenericSetup Product Changelog
 GenericSetup 1.5.0 (unreleased)
 -------------------------------
 
+- Added new feature to the component handler. For factory based utilities you
+  can now specify an additional id. All factory based utilities will now by
+  default be added to the site manager (being an ObjectManager itself) as an
+  object and this persistent object is registered as the utility. On removal
+  both the registration and the object are removed. The new id argument is
+  used to specify the id of the object as set via `__name__`. This change
+  makes these utilities introspectable in the ZMI and clearly separates the
+  persistent object and utility registration aspect.
+
 - Adjusted TarballImportContext to work with Python 2.6's tarfile module.
 
 - Cleaned up / normalized imports:
